; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/v4l2-core/extr_v4l2-ioctl.c_v4l_print_enum_dv_timings.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/v4l2-core/extr_v4l2-ioctl.c_v4l_print_enum_dv_timings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_enum_dv_timings = type { i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"index=%u, \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @v4l_print_enum_dv_timings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @v4l_print_enum_dv_timings(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.v4l2_enum_dv_timings*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.v4l2_enum_dv_timings*
  store %struct.v4l2_enum_dv_timings* %7, %struct.v4l2_enum_dv_timings** %5, align 8
  %8 = load %struct.v4l2_enum_dv_timings*, %struct.v4l2_enum_dv_timings** %5, align 8
  %9 = getelementptr inbounds %struct.v4l2_enum_dv_timings, %struct.v4l2_enum_dv_timings* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @pr_cont(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load %struct.v4l2_enum_dv_timings*, %struct.v4l2_enum_dv_timings** %5, align 8
  %13 = getelementptr inbounds %struct.v4l2_enum_dv_timings, %struct.v4l2_enum_dv_timings* %12, i32 0, i32 0
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @v4l_print_dv_timings(i32* %13, i32 %14)
  ret void
}

declare dso_local i32 @pr_cont(i8*, i32) #1

declare dso_local i32 @v4l_print_dv_timings(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
